tests/regression/success/contract_syntax.lus
node N (inp: int) returns (x: int)
con
  var l: int = 3;
  assume inp > 0;
  guarantee l > 2; 
  guarantee x > 2;
noc
var l: int;
let
  l = 3;
  x = inp + l;
  check x > 2;
tel
