tests/regression/error/contract_syntax.lus
node N (inp: int) returns (x: int)
var l: int;
con
  assume inp > 0;
  guarantee l > 2; 
  guarantee x > 2;
noc
let
  l = 3;
  x = inp + l;
  check x > 2;
tel
